[tool.poetry]
name = "lkfmt"
version = "0.3.0a16"
homepage = "https://github.com/likianta/lkfmt"
description = "All-in-one Python code formattor which is tailored of `black` + `isort` + `autoflake` for myself taste."
readme = "README.md"
authors = ["likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "*"
# argsense = { url = "http://likianta.pro:2006/argsense/argsense-1.0.0a16-py3-none-any.whl" }
autoflake = "*"
autopep8 = "*"
black = "*"
isort = "*"
libcst = "*"
lk-logger = "^5.6.2"
lk-utils = "^2.5.6"
yapf = "^0.40"

[tool.poetry.group.dev.dependencies]
ipython = "*"
# ruff = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[tool.poetry.scripts]
lkfmt = 'lkfmt.__main__:_shortcut'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
